# agentic-file-search

./: .dockerignore  .env.example  .gitignore  AGENT.md  ARCHITECTURE.md  Dockerfile  README.md  agentic-file-search.sqlite  agentic-file-search.sqlite-shm  agentic-file-search.sqlite-wal  docker-compose.yml  package-lock.json  package.json  prompt.js  pyproject.toml  tsconfig.json
docker/: app.env.example
docs/: traditional-rag-design.md
frontend/: index.html  package-lock.json  package.json
legacy/python/: README.md  pyproject.toml
legacy/python/docs/revamp/: M1_PROGRESS_REPORT.md  PROTOTYPE_SPEC.md
legacy/python/scripts/: document_parsing_bridge.py
legacy/python/src/fs_explorer/: __init__.py  agent.py  blob_store.py  document_cache.py  document_pages.py  exploration_trace.py  fs.py  image_semantics.py  main.py  models.py  openai_compat.py  server.py  ui.html  workflow.py
legacy/python/src/fs_explorer/storage/: base.py  postgres.py
legacy/python/tests/: conftest.py  test_agent.py  test_context_state.py  test_e2e.py  test_embeddings.py  test_indexing.py  test_server_documents_api.py  test_server_frontend.py
node/: package-lock.json  package.json
python/: document_parsing.py  document_parsing_bridge.py
scripts/: extract-pdf-images.ts  extract-semantic-candidate-images.ts  test-image-semantic-candidate.ts
src/: index.ts
tests/: agent.test.ts  blob-store.test.ts  document-library-service.test.ts  document-library.test.ts  document-parsing.test.ts  exploration-workflow.test.ts  explore-sessions.test.ts  http-server.test.ts  index-search.test.ts  (+16 more)
(+120 files in other folders)
